--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,11 @@
       </section>
     </section> 
 
-   
+    <div id="banner">
+      <canvas id="canvas"></canvas>
+      <div>Hello, World!</div>
+      
+  </div>
 
 
 <footer></footer>
